--- a/donut_shop.html
+++ b/donut_shop.html
@@ -7,29 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
+    <h1 align="center">Top Pot Donut Counter</h1>
     <table id = "donut-table">
-      <tr>
-        <th>Location</th>
-        <th>7:00 AM</th>
-        <th>8:00 AM</th>
-        <th>9:00 AM</th>
-        <th>10:00 AM</th>
-        <th>11:00 AM</th>
-        <th>12:00 PM</th>
-        <th>1:00 PM</th>
-        <th>2:00 PM</th>
-        <th>3:00 PM</th>
-        <th>4:00 PM</th>
-        <th>5:00 PM</th>
-        <th>Total</th>
-      </tr>
-      <tr></tr>
-      <tr></tr>
-      <tr></tr>
-      <tr></tr>
-      <tr></tr>
   </table>
-
   <script type="text/javascript" src="donut_shop.js"></script>
    </body>
   </html>
