Add ability to add new locations
Update README to include blurb on new functionality.

--- a/donut_shop.html
+++ b/donut_shop.html
@@ -8,8 +8,22 @@
   </head>
   <body>
     <h1 align="center">Top Pot Donut Counter</h1>
+      <form>
+        <p>Location name:
+         <input type="text" id="shop-name">
+        Minimun customers per hour:
+          <input type="text" id="min-cust">
+        Maximum customers per hour:
+          <input type="text" id="max-cust">
+        Avgerage customer purchase:
+          <input type="text" id="avg-purch">
+        </p>
+        <p>
+        <input id = "input-button" type="submit" value="Submit"/>
+      </p>
+      </form>
     <table id = "donut-table">
-  </table>
+    </table>
   <script type="text/javascript" src="donut_shop.js"></script>
-   </body>
-  </html>
+ </body>
+</html>
