Add updates to Michael's work
Clean up code to look better.
Add hover feature to Add button.
Correct spelling mistakes.

--- a/donut_shop.html
+++ b/donut_shop.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="styles.css"/>
     <link href='http://fonts.googleapis.com/css?family=Cabin|Cabin+Sketch:700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
   </head>
   <body>
     <section class="header">
@@ -25,7 +26,7 @@
           <input type="text" class="form-data" id="min-cust">
         Maximum customers per hour:
           <input type="text" class="form-data" id="max-cust">
-        Avgerage customer purchase:
+        Average customer purchase:
           <input type="text" class="form-data" id="avg-purch">
         </p>
         <p>
